2004-10-08  Andrew Pinski  <pinskia@physics.uc.edu>

	PR c/16999
	* gcc.dg/cpp/ident-1.c: New test.

2004-10-08  Nathan Sidwell  <nathan@codesourcery.com>

	* gcc.c-torture/compile/acc1.c: New.

2004-10-08  Andrew Pinski  <pinskia@physics.uc.edu>

	* gcc.dg/darwin-longdouble.c: Include stdlib.h and string.h.
	* gcc.dg/darwin-abi-2.c: Include stdlib.h.

2004-10-08  Christian Ehrhardt  <ehrhardt@mathematik.uni-ulm.de>

	* gcc.dg/ultrasp11.c: New test.

2004-10-08  Michael Matz  <matz@suse.de>

	* gcc.dg/doloop-2.c: New test.

2004-10-08  Joseph S. Myers  <jsm@polyomino.org.uk>

	* gcc.dg/assign-warn-1.c, gcc.dg/assign-warn-2.c: New tests.
	* gcc.dg/warn-1.c, gcc.dg/noncompile/20020213-1.c,
	objc.dg/method-9.m: Update expected diagnostics.

2004-10-07  Geoffrey Keating  <geoffk@apple.com>

	* gcc.dg/ppc-fsel-3.c: New file.
	* gcc.dg/ppc-fsel-1.c: Add -fno-trapping-math, update comment.

2004-10-07  Paul Brook  <paul@codesourcery.com>

	* gfortran.dg/intrinsic_verify_1.f90: New test.

2004-10-07  Paul Brook  <paul@codesourcery.com>

	* gfortran.dg/empty_format_1.f90: Remove stray commas.

2004-10-07  Tobias Schlueter  <tobias.schlueter@physik.uni-muenchen.de>

	* gfortran.fortran-torture/execute/intrinsic_mvbits.f90, 
	gfortran.dg/ishft.f90: Add more tests. Add dg-warning in followup
	commit.

2004-10-07  Andrew Pinski  <pinskia@physics.uc.edu>

	* g++.dg/ext/asm6.C: Remove extraneous semicolon.

2004-10-07  Giovanni Bajo  <giovannibajo@gcc.gnu.org>

	PR c++/17115
	* g++.dg/warn/Winline-4.C: New test.

2004-10-07  Christian Ehrhardt  <ehrhardt@mathematik.uni-ulm.de>

	* gcc.c-torture/compile/20041007-1.c: New test.

2004-10-07  Paul Brook  <paul@codesourcery.com>

	PR fortran/17678
	* gfortran.dg/use_allocated_1.f90: New test.

2004-10-06  Andrew Pinski  <pinskia@physics.uc.edu>

	PR middle-end/17849
	* gfortran.fortran-torture/compile/nested.f90: New test

2004-10-06  Joseph S. Myers  <jsm@polyomino.org.uk>

	* gcc.dg/Wconversion-2.c, gcc.dg/func-args-1.c: New tests.
