@@ -1,3 +1,0 @@
-/* Configuration for GCC for Intel i386 running System V Release 3.  */
-
-#include "xm-svr3.h"
